# sitemade-backend

./: .env.sample  .gitignore  Cargo.toml  body_tags.yaml  headers_tags.yaml
cli/: Cargo.toml
cli/src/: main.rs
scrapper/: Cargo.toml
scrapper/src/: db.rs  lib.rs
