[package]
name = "sitemade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "cli",
    "scrapper",
]
default-members = [
    "cli",
]

[[bin]]
name = "sitemade"
path = "cli/src/main.rs"


[dependencies]
