[package]
name = "scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdns-rs = "0.2.2"
chrono = "0.4.26"
mongodb = "2.6.0"
regex = "1.9.1"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.17.1"
serde = "1.0.183"
serde_json = "1.0.104"
tokio = "1.31.0"
bson = { version = "2.0.0-beta.1", features = ["chrono-0_4"] }
serde_yaml = "0.9.25"
env_logger = "0.10.0"
log = "0.4.20"
